--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,11 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5:3.0.4.RELEASE'
+
+
+    // modelmapper
+    implementation 'org.modelmapper:modelmapper:2.1.1'
+
 }
 
 tasks.named('test') {
