--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    runtimeOnly 'com.h2database:h2'
+    //runtimeOnly 'com.h2database:h2'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
@@ -54,6 +54,11 @@ dependencies {
     // archunit
     testImplementation 'com.tngtech.archunit:archunit:1.0.0-rc1'
     testImplementation 'com.tngtech.archunit:archunit-junit5:1.0.0-rc1'
+
+    // testcontainers
+    testImplementation "org.testcontainers:junit-jupiter:1.17.3"
+    testImplementation "org.testcontainers:postgresql:1.17.3"
+
 }
 
 tasks.named('test') {
