--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,12 @@
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
-spring.datasource.username=testuser
-spring.datasource.password=testpass
+spring.datasource.url=jdbc:postgresql://database-postgres.cldpnw6d4wee.ap-northeast-2.rds.amazonaws.com:5432/postgres
+# localhost:5432/testdb
+spring.datasource.username=postgres
+# testuser
+spring.datasource.password=archer!0
+# testpass
+
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -12,4 +16,3 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-server.tomcat.max-http-form-post-size=5MB
