set jar configuration

--- a/build.gradle
+++ b/build.gradle
@@ -76,6 +76,11 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
+jar {
+    enabled = false
+    archiveClassifier = ''
+}
+
 /**
  * QueryDSL
  */
