--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,12 +1,8 @@
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:postgresql://database-postgres.cldpnw6d4wee.ap-northeast-2.rds.amazonaws.com:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=archer!0
-# localhost:5432/testdb
-# testuser
-# testpass
-
+spring.datasource.url=localhost:5432/testdb
+spring.datasource.username=testuser
+spring.datasource.password=testpass
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
