--- a/src/main/resources/application-dep.properties
+++ b/src/main/resources/application-dep.properties
@@ -11,3 +11,6 @@ spring.mail.password=faopnberdsbclnpo
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# TODO mouken.com
+app.host=https://ec2-3-39-118-144.ap-northeast-2.compute.amazonaws.com/ 
