--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,9 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+application-dev.properties
+application-dep.properties
+application-local.properties
 
 ### NetBeans ###
 /nbproject/private/
