--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-spring.profiles.active=local
-
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.profiles.include=dep
 
 ## SQL logging
 spring.jpa.properties.hibernate.format_sql=true
@@ -8,7 +6,3 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 server.tomcat.max-http-form-post-size=5MB
-
-app.host=http://localhost:8080
-
-spring.mvc.hiddenmethod.filter.enabled=true
