--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,8 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-*.properties
+application-dev.properties
+application-aws.properties
 
 ### NetBeans ###
 /nbproject/private/
