--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.profiles.active=default
-spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
 
 ## SQL logging
 spring.jpa.properties.hibernate.format_sql=true
