--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.profiles.active=default
 spring.jpa.defer-datasource-initialization=true
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 ## SQL logging
 spring.jpa.properties.hibernate.format_sql=true
