--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.profiles.active=default
 spring.jpa.defer-datasource-initialization=true
+
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.session.store-type=jdbc
 
 ## SQL logging
 spring.jpa.properties.hibernate.format_sql=true
