--- a/build.gradle
+++ b/build.gradle
@@ -63,8 +63,8 @@ dependencies {
     testImplementation 'com.tngtech.archunit:archunit-junit5:1.0.0-rc1'
 
     // testcontainers
-    //testImplementation "org.testcontainers:junit-jupiter:1.17.3"
-    //testImplementation "org.testcontainers:postgresql:1.17.3"
+    testImplementation "org.testcontainers:junit-jupiter:1.17.3"
+    testImplementation "org.testcontainers:postgresql:1.17.3"
 
     // querydsl
     implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
