ADD Authorization to gradlew

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ cache:
     - '$HOME/.m2/repository'
     - '$HOME/.gradle'
 
+before_install:
+  - chomod +x gradlew
+
 before_script:
   - chmod a+x gradlew
 
