--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ cache:
     - '$HOME/.gradle'
 
 before_install:
-  - chomod +x gradlew
+  - chmod +x gradlew
 
 before_script:
   - chmod a+x gradlew
