--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,8 @@ before_deploy:
 
 deploy:
   - provider: s3
-    access_key_id: $AWS_ACCESS_KEY AKIAS4FEHEEYMHUTL56E
-    secret_access_key: $AWS_SECRET_KEY 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
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
     bucket: ryuu-bucket
     region: ap-northeast-2
     skip_cleanup: true
