--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,8 @@ deploy:
     deployment_group: mouken-group # the CodeDeploy deployment group
     region: ap-northeast-2
     wait-until-deployed: true
-
+    on:
+      branch: main
 
 notifications:
   email:
