--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ script:
 
 before_deploy:
   - mkdir -p before-deploy
+  - cp src/main/resources before-deploy/src/main/resources
   - cp scripts/*.sh before-deploy/
   - cp appspec.yml before-deploy/
   - cp build/libs/*.jar before-deploy/
