--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,8 @@ script:
 
 before_deploy:
   - mkdir -p before-deploy
-  - cp src/main/resources before-deploy/src/main/resources
+  - mkdir -p before-deploy/src/main/resources
+  - cp src/main/resources/* before-deploy/src/main/resources/
   - cp scripts/*.sh before-deploy/
   - cp appspec.yml before-deploy/
   - cp build/libs/*.jar before-deploy/
