--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ script:
 before_deploy:
   - mkdir -p before-deploy
   - mkdir -p before-deploy/src/main/resources/static
-  - cp src/main/resources/static/node_modules before-deploy/src/main/resources/static/
+  - cp -r src/main/resources/static/node_modules before-deploy/src/main/resources/static/
   - cp scripts/*.sh before-deploy/
   - cp appspec.yml before-deploy/
   - cp build/libs/*.jar before-deploy/
