--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -58,7 +58,7 @@ jobs:
       run: |
         mkdir -p before-deploy
         gradle npmInstall
-        cp src/main/resources/static/node_modules before-deploy/src/main/resources/static/ 
+        cp -r src/main/resources/static/node_modules before-deploy/src/main/resources/static/ 
         cp scripts/*.sh before-deploy/
         cp appspec.yml before-deploy/
         cp build/libs/*.jar before-deploy/
