--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -56,9 +56,9 @@ jobs:
 
     - name: Generate deployment package
       run: |
-        mkdir -p before-deploy
+        mkdir -p before-deploy && mkdir -p before-deploy/src/main/resources/static/
         gradle npmInstall
-        cp -r src/main/resources/static/node_modules before-deploy/src/main/resources/static/ 
+        cp -r src/main/resources/static/node_modules before-deploy/src/main/resources/static/
         cp scripts/*.sh before-deploy/
         cp appspec.yml before-deploy/
         cp build/libs/*.jar before-deploy/
