--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -57,6 +57,7 @@ jobs:
     - name: Generate deployment package
       run: |
         mkdir -p before-deploy
+        gradle npmInstall
         cp scripts/*.sh before-deploy/
         cp appspec.yml before-deploy/
         cp build/libs/*.jar before-deploy/
