--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,9 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-application-dev.properties
-application-aws.properties
+application-dev-db.properties
+application-real-db.properties
+application-mail.properties
 
 ### NetBeans ###
 /nbproject/private/
