--- a/src/main/resources/application-real1.properties
+++ b/src/main/resources/application-real1.properties
@@ -1,4 +1,4 @@
-server.port=8082
-#spring.profiles.include=oauth,real-db
+server.port=8081
+spring.profiles.include=real-db,mail
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.session.store-type=jdbc
