--- a/appspec.yml
+++ b/appspec.yml
@@ -1,7 +1,7 @@
 version: 0.0
 os: linux
 files:
-  - source: /
+  - source:  /
     destination: /home/ec2-user/app/step3/zip/
     overwrite: yes
 
@@ -13,7 +13,7 @@ permissions:
 
 hooks:
   AfterInstall:
-    - lcation: stop.sh
+    - location: stop.sh
       timeout: 60
       runas: ec2-user
   ApplicationStart:
