--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ node  {
 }
 
 group = 'com.teamy'
-version = '1.0.1-SNAPSHOT' + new Date().format("-yyyyMMddHHmmss")
+version = '1.0.2-SNAPSHOT'
 sourceCompatibility = '11'
 
 configurations {
