fix: permit resource /app-profile

--- a/src/main/resources/application-real2.properties
+++ b/src/main/resources/application-real2.properties
@@ -1,4 +1,4 @@
 server.port=8082
-spring.profiles.include=real-db,mail
+spring.profiles.include=real-db,mail,security
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.session.store-type=jdbc
