--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,4 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.session.store-type=jdbc
-app.host=http://localhost:8080
+server.port=8081
+app.host=http://localhost:8081
