--- a/src/main/resources/application-aws.properties
+++ b/src/main/resources/application-aws.properties
@@ -1,4 +1,4 @@
-app.host=https://ec2-3-39-118-144.ap-northeast-2.compute.amazonaws.com/
+app.host=http://ec2-3-39-118-144.ap-northeast-2.compute.amazonaws.com/
 spring.profiles.include=real-db,mail,security
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.session.store-type=jdbc
