--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,6 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 server.tomcat.max-http-form-post-size=5MB
 
-spring.pid.file=/home/ec2-user/app/step2/mouken.pid
-
+spring.pid.file=/home/ec2-user/app/step3/moukenn.pid
+spring.profiles.group.real1="real1,real-db",mail,security
+spring.profiles.group.real2="real2,real-db",mail,security
