--- a/appspec.yml
+++ b/appspec.yml
@@ -12,12 +12,12 @@ permissions:
     group: ec2-user
 
 hooks:
-#  AfterInstall:
-#    - location: stop.sh
-#      timeout: 30
-#      runas: ec2-user
+  AfterInstall:
+    - location: stop.sh
+      timeout: 30
+      runas: ec2-user
   ApplicationStart:
-    - location: deploy.sh
+    - location: start.sh
       timeout: 30
       runas: ec2-user
 #  ValidateService:
