--- a/appspec.yml
+++ b/appspec.yml
@@ -17,7 +17,7 @@ hooks:
       timeout: 30
       runas: ec2-user
   ApplicationStart:
-    - location: start.sh
+    - location: deploy.sh
       timeout: 30
       runas: ec2-user
 #  ValidateService:
