feat: search logic

--- a/.gitignore
+++ b/.gitignore
@@ -46,5 +46,5 @@ src/main/resources/static/node
 application-real-db.properties
 application-real-mail.properties
 application-real-oauth.properties
+application-dev-mail.properties
 application-dev-oauth.yml
-application-security.yml
