--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -58,7 +58,7 @@ jobs:
       uses: 1466587594/get-current-time@v2
       id: current-time
       with:
-        format: YYYY-MM-DD-HH-mm-ss
+        format: YYYY-MM-DDTHH-mm-ss
         utcOffset: "+09:00"
 
     - name: Show Current Time
