--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -2,12 +2,17 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
-  properties:
-    hibernate:
-      dialect: org.hibernate.dialect.PostgreSQLDialect
+#  properties:
+#    hibernate:
+#      dialect: org.hibernate.dialect.PostgreSQLDialect
+#  datasource:
+#    driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
+#    url: jdbc:tc:postgresql:///party-test
   datasource:
-    driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
-    url: jdbc:tc:postgresql:///party-test
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/testdb
+    username: testuser
+    password: testpass
   security:
     oauth2:
       client:
