--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -2,9 +2,9 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
-  #  properties:
-#    hibernate:
-#      dialect: org.hibernate.dialect.PostgreSQLDialect
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
 #  datasource:
 #    driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
 #    url: jdbc:tc:postgresql:///party-test
