--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,4 +1,10 @@
+server:
+  port: 8081
+app:
+  host: http://localhost:8081
 spring:
+  session:
+    store-type: jdbc
   jpa:
     hibernate:
       ddl-auto: create
