--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.pid.file=/home/ec2-user/app/step3/mouken.pid
 
+spring.profiles.group.test=test
 spring.profiles.group.real=real, real-db, real-mail, real-oauth
 spring.profiles.group.real1=real1, real-db, real-mail, real-oauth
 spring.profiles.group.real2=real2, real-db, real-mail, real-oauth
