--- a/build.gradle
+++ b/build.gradle
@@ -81,8 +81,8 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
 
     // archunit
-    testImplementation 'com.tngtech.archunit:archunit:1.0.0-rc1'
-    testImplementation 'com.tngtech.archunit:archunit-junit5:1.0.0-rc1'
+//    testImplementation 'com.tngtech.archunit:archunit:1.0.0-rc1'
+//    testImplementation 'com.tngtech.archunit:archunit-junit5:1.0.0-rc1'
 
     // testcontainers
     //testImplementation "org.testcontainers:junit-jupiter:1.17.3"
