fix: test for fixing an error

--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -45,14 +45,14 @@ jobs:
       run: | 
         gradle npmInstall
 
-#    - name: Build with Gradle
-#      run: ./gradlew clean -x test build
-#      shell: bash
-
     - name: Build with Gradle
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-      with:
-        arguments: build
+      run: ./gradlew clean -x test build
+      shell: bash
+
+#    - name: Build with Gradle
+#      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+#      with:
+#        arguments: build
 
     - name: Get current time
       uses: 1466587594/get-current-time@v2
